--- a/Jupiter/Users/MasterPage_User.Master
+++ b/Jupiter/Users/MasterPage_User.Master
@@ -3,16 +3,18 @@
 <html>
 <head runat="server">
     
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta charset="utf-8">
+      <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
-  <meta name="author" content="ItsMeIDid">
+  <meta name="author" content="">
 
-    <title>Jupiter</title>
-        <link href="../css/bootstrap.min.css" rel="stylesheet" />
-      <link href="../css/heroic-features.css" rel="stylesheet">
-   
+  <title>JupiterJazz Dashboard</title>
+
+  <!-- Bootstrap core CSS -->
+  <link href="../css/bootstrap.min.css" rel="stylesheet">
+
+  <!-- Custom styles for this template -->
+  <link href="../css/heroic-features.css" rel="stylesheet">
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 
@@ -64,14 +66,12 @@
 
     </asp:ContentPlaceHolder>
     </div>
-        
-
-        <div style="margin:5% 0% 5% 0%">
 
             <asp:ContentPlaceHolder ID="PageContent" runat="server">
           
             </asp:ContentPlaceHolder>
-        </div>
+ 
+     
     <div style="margin:5%">
 
             <asp:ContentPlaceHolder ID="Footer" runat="server">
@@ -83,7 +83,9 @@
         </footer>
             </asp:ContentPlaceHolder>
     </div>
-     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script src="../scripts/bootstrap.min.js"></script>
+   <!--  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>-->
+    <script src="../scripts/jquery.min.js"></script>
+  <!--  <script src="../scripts/bootstrap.min.js"></script>-->
+    <script src="../scripts/bootstrap.bundle.min.js"></script>
 </body>
 </html>
